--- a/src/assets/css/sass/contratos/_fieldset_resp_aluno.scss
+++ b/src/assets/css/sass/contratos/_fieldset_resp_aluno.scss
@@ -1,9 +1,8 @@
 @use '../abstracts/' as *;
 
-
 #fieldset_resp,
 #fieldset_aluno {
-position:relative;
+    position: relative;
     .label_numero {
         max-width: 45px !important;
         padding-left: 20px;
@@ -11,9 +10,7 @@ position:relative;
     .end_numero {
         max-width: 60px !important;
     }
-  
 }
-
 #fieldset_aluno {
     display: block;
     overflow: hidden;
@@ -21,13 +18,12 @@ position:relative;
     border-color: lighten($secondary-color, 10%) !important;
     transition: height 1s, padding 1s, opacity 0.8s;
     opacity: 1;
-
-div{
-    label{
-       // background: #d3d7dd;
-        background: #ddd7d3;
+    div {
+        label {
+            // background: #d3d7dd;
+            background: #ddd7d3;
+        }
     }
-}
     // bloqueia o input aluno nome;
     #block_aluno {
         display: none;
@@ -38,11 +34,11 @@ div{
         left: 0;
         background: rgba(0, 0, 0, 0.1);
     }
-    #div_aluno_parentesco{
-        width:100%;
+    #div_aluno_parentesco {
+        width: 100%;
         #label_parentesco {
             max-width: 350px !important;
-            width:350px;
+            width: 350px;
             padding-left: 20px;
             flex-grow: 1;
         }
@@ -50,24 +46,20 @@ div{
             max-width: auto;
         }
     }
-  
-
- 
 }
 #fieldset_resp {
-    padding-top:70px !important;
+    padding-top: 70px !important;
     border-color: lighten($primary-color, 10%) !important;
     div {
-        margin-bottom:20px;
-       label{
-           background: #d3d7dd;
-
-       }
+        margin-bottom: 20px;
+        label {
+            background: #d3d7dd;
+        }
         #btn_marcar_resp_aluno {
-        user-select: none;
-
-            top:20px; right:35px;
-            position:absolute;
+            user-select: none;
+            top: 20px;
+            right: 35px;
+            position: absolute;
             clear: both;
             transition: all 0.5s;
             @extend .btn;
@@ -99,19 +91,16 @@ div{
 
             }
         }
-     
-
     }
-
-  
 
 }
 
-
-#div_resp_obs, #div_aluno_obs{
+#div_resp_obs,
+#div_aluno_obs {
     min-width: 100%;
 }
 
-#div_resp_genero, #div_aluno_genero{
-   max-width: 160px;
+#div_resp_genero,
+#div_aluno_genero {
+    max-width: 160px;
 }
