Ajustes de layout contrato view

--- a/src/assets/css/sass/contratos/_view_table_contratos.scss
+++ b/src/assets/css/sass/contratos/_view_table_contratos.scss
@@ -2,7 +2,7 @@
     position: relative;
 
     table{
-        .td_contrato_id, .td_aluno_assoc, .td_contrato_status{
+        .td_contrato_id, .td_aluno_assoc, .td_contrato_status, .td_contrato_info{
             text-align: center;
         }
     }
