--- a/src/components/contratos/infoContrato.html
+++ b/src/components/contratos/infoContrato.html
@@ -122,7 +122,7 @@
             <input id="curso_data_contrato"  readonly='true' type="date" /> </div>
         </div>
         <!--row-->
-        <div class='div_input' id='div_curso_combo'>
+        <div class='div_input' id='div_curso_desconto_combo'>
     <label>Combo: </label>
                 <div id='curso_desconto_combo' ></div>
       </div>
