--- a/src/assets/css/sass/contratos/_info_contrato.scss
+++ b/src/assets/css/sass/contratos/_info_contrato.scss
@@ -235,11 +235,7 @@ option[disabled] {
             color: red;
         }
   
-       #div_curso_combo{
-           textarea{
-width:100%;
-           }
-       }
+  
 
         #div_curso_obs {
             margin-top: 5px;
@@ -248,11 +244,16 @@ width:100%;
                 padding: 5px;
             }
         }
-        
+     
 
     }
 
- 
+    #div_curso_desconto_combo{
+        div{
+            background: #dfdfdf;
+            padding:5px;
+        }
+    }
  #div_curso_obs{
     margin-top:10px;
     width: 100%;
