--- a/src/components/cursosInfo/index.html
+++ b/src/components/cursosInfo/index.html
@@ -2,7 +2,7 @@
     <h1>Nossos Cursos</h1>
     <div class='page_content'>
         <!---------------------------------INFORMÁTICA PRÁTICA-->
-        <div class='curso_content' id='informatica_pratica'>
+        <div class='curso_content curso_informatica_pratica'>
             <h2>Informática Prática</h2>
             <div class='categoria'>
                 <p>Categoria: Informática</p>
@@ -34,7 +34,7 @@
 
 
         <!---------------------------------INFORMÁTICA PROFISSONAL-->
-        <div class='curso_content' id='informatica_profissional'>
+        <div class='curso_content curso_informatica_profissional'>
             <h2>Informática Profissional</h2>
             <div class='categoria'>
                 <p>Categoria: Informática</p>
@@ -68,7 +68,7 @@
 
 
         <!---------------------------------INFORMÁTICA PROFISSONAL-->
-        <div class='curso_content' id='informatica_completo'>
+        <div class='curso_content curso_informatica_completo'>
             <h2>Informática Completo</h2>
             <div class='categoria'>
                 <p>Categoria: Informática</p>
@@ -103,7 +103,7 @@
         </div>
 
         <!---------------------------------INFORMÁTICA KIDS-->
-        <div class='curso_content' id='informatica_kids'>
+        <div class='curso_content curso_informatica_kids'>
             <h2>Informática KIDS</h2>
             <div class='categoria'>
                 <p>Categoria: Informática</p>
@@ -132,7 +132,7 @@
 
 
         <!---------------------------------INGLÊS BÁSICO-->
-        <div class='curso_content' id='informatica_kids'>
+        <div class='curso_content curso_ingles_basico'>
             <h2>Inglês Básico</h2>
             <div class='categoria'>
                 <p>Categoria: Inglês</p>
@@ -156,7 +156,7 @@
         </div>
 
         <!---------------------------------INGLÊS Intermediário-->
-        <div class='curso_content' id='ingles_intermediario'>
+        <div class='curso_content curso_ingles_intermediario'>
             <h2>Inglês Intermediário</h2>
             <div class='categoria'>
                 <p>Categoria: Inglês</p>
@@ -180,7 +180,7 @@
             </div>
         </div>
         <!---------------------------------INGLÊS Avançado-->
-        <div class='curso_content' id='ingles_avancado'>
+        <div class='curso_content curso_ingles_avancado'>
             <h2>Inglês Avançado</h2>
             <div class='categoria'>
                 <p>Categoria: Inglês</p>
@@ -205,7 +205,7 @@
         </div>
 
         <!---------------------------------INGLÊS KIDS-->
-        <div class='curso_content' id='ingles_avancado'>
+        <div class='curso_content curso_ingles_avancado'>
             <h2>Inglês KIDS</h2>
             <div class='categoria'>
                 <p>Categoria: Inglês</p>
@@ -230,7 +230,7 @@
         </div>
 
         <!---------------------------------EXCEL AVANÇADO-->
-        <div class='curso_content' id='ingles_avancado'>
+        <div class='curso_content curso_excel_avancado'>
             <h2>Excel Avançado</h2>
             <div class='categoria'>
                 <p>Categoria: Excel</p>
@@ -281,7 +281,7 @@
         </div>
 
         <!---------------------------------DESENVOLVIMENTO WEB-->
-        <div class='curso_content' id='ingles_desenvolvimento_web'>
+        <div class='curso_content curso_web'>
             <h2>Desenvolvimento WEB</h2>
             <div class='categoria'>
                 <p>Categoria: web</p>
@@ -307,7 +307,7 @@
         </div>
 
         <!---------------------------------BANCO DE DADOS-->
-        <div class='curso_content' id='ingles_banco_dados'>
+        <div class='curso_content curso_banco_dados'>
             <h2>Banco de Dados MySQL</h2>
             <div class='categoria'>
                 <p>Categoria: banco de dados</p>
