--- a/src/assets/css/sass/abstracts/_variables.scss
+++ b/src/assets/css/sass/abstracts/_variables.scss
@@ -48,3 +48,29 @@ $padding-extra-light : 5px;
 $padding-light : 10px; 
 $padding-medium : 20px;
 $padding-large : 40px;
+
+//Cursos Colors
+
+$background-informatica : #2282be;
+$color-informatica : rgb(31, 60, 122);
+
+$background-web : #174a83;
+$color-web : rgb(31, 60, 122);
+
+$background-ingles : #ed1860;
+$color-ingles : #ad054b;
+
+$background-excel : #097a4a;
+$color-excel : #036b40;
+
+$background-adm : #36a58f;
+$color-adm : #0d705c;
+
+$background-excel : #097a4a;
+$color-excel : #097a4a;
+
+$background-banco : #fdbf5c;
+$color-banco : #ca881d;
+
+
+
