--- a/src/assets/css/sass/abstracts/_variables.scss
+++ b/src/assets/css/sass/abstracts/_variables.scss
@@ -63,6 +63,9 @@ $color-ingles : #ad054b;
 $background-excel : #097a4a;
 $color-excel : #036b40;
 
+$background-espanhol : #f0a029;
+$color-espanhol : #7a082e;
+
 $background-adm : #36a58f;
 $color-adm : #0d705c;
 
