--- a/src/components/contratos/formAddContrato.html
+++ b/src/components/contratos/formAddContrato.html
@@ -129,6 +129,8 @@
               <option class='ingles' name='IGB' value='Inglês Básico'>Inglês Básico</option>
               <option class='ingles' name='IGI' value='Inglês Intermediário'>Inglês Intermediário</option>
               <option class='ingles' name='IGA' value='Inglês Avançado'>Inglês Avançado</option>
+              <option class='espanhol' name='ESB' value='Espanhol'>Espanhol Básico / Intermediário</option>
+              <option class='administracao' name='ADM' value='Administração'>Administração</option>
               <option class='excel' name='EXA' value='Excel Avançado'>Excel Avançado</option>
               <option class='web' name='DWB' value='Desenvolvimento Web'>Desenvolvimento Web</option>
               <option class='bd' name='BDBMYSQL' value='Banco de Dados Básico(MySQL)'>Banco de Dados Básico MySQL
