--- a/src/components/cursosInfo/index.html
+++ b/src/components/cursosInfo/index.html
@@ -1,7 +1,10 @@
 <div class='components' id='cursos_info'>
     <h1>Nossos Cursos</h1>
     <div class='page_content'>
-        <!---------------------------------INFORMÁTICA PRÁTICA-->
+        <!------------------------------------------------------------------------------------------>
+        <!---------------------------------INFORMÁTICA PRÁTICA-------------------------------------->
+        <!------------------------------------------------------------------------------------------>
+
         <div class='curso_content curso_informatica_pratica'>
             <h2>Informática Prática</h2>
             <div class='categoria'>
@@ -25,15 +28,17 @@
                 </ul>
             </div>
             <div class='div_valor'>
-                <p class='valor'>Investimento: R$90,00</p>
+                <p class='valor'>Investimento: R$110,00</p>
             </div>
             <div class='div_duracao'>
                 <p class='duracao'>Duração: 12 meses</p>
             </div>
         </div>
 
+        <!------------------------------------------------------------------------------------------>
+        <!---------------------------------INFORMÁTICA PROFISSONAL---------------------------------->
+        <!------------------------------------------------------------------------------------------>
 
-        <!---------------------------------INFORMÁTICA PROFISSONAL-->
         <div class='curso_content curso_informatica_profissional'>
             <h2>Informática Profissional</h2>
             <div class='categoria'>
@@ -59,15 +64,17 @@
                 </ul>
             </div>
             <div class='div_valor'>
-                <p class='valor'>Investimento: R$90,00</p>
+                <p class='valor'>Investimento: R$110,00</p>
             </div>
             <div class='div_duracao'>
                 <p class='duracao'>Duração: 12 meses</p>
             </div>
         </div>
 
+        <!------------------------------------------------------------------------------------------>
+        <!---------------------------------INFORMÁTICA PROFISSONAL---------------------------------->
+        <!------------------------------------------------------------------------------------------>
 
-        <!---------------------------------INFORMÁTICA PROFISSONAL-->
         <div class='curso_content curso_informatica_completo'>
             <h2>Informática Completo</h2>
             <div class='categoria'>
@@ -95,14 +102,16 @@
                 </ul>
             </div>
             <div class='div_valor'>
-                <p class='valor'>Investimento: R$90,00</p>
+                <p class='valor'>Investimento: R$110,00</p>
             </div>
             <div class='div_duracao'>
                 <p class='duracao'>Duração: 12 meses</p>
             </div>
         </div>
+        <!------------------------------------------------------------------------------------------>
+        <!---------------------------------INFORMÁTICA KIDS------------------------------------------>
+        <!------------------------------------------------------------------------------------------>
 
-        <!---------------------------------INFORMÁTICA KIDS-->
         <div class='curso_content curso_informatica_kids'>
             <h2>Informática KIDS</h2>
             <div class='categoria'>
@@ -123,15 +132,17 @@
                 </ul>
             </div>
             <div class='div_valor'>
-                <p class='valor'>Investimento: R$90,00</p>
+                <p class='valor'>Investimento: R$110,00</p>
             </div>
             <div class='div_duracao'>
                 <p class='duracao'>Duração: 12 meses</p>
             </div>
         </div>
 
+        <!------------------------------------------------------------------------------------------>
+        <!---------------------------------INGLÊS BÁSICO-------------------------------------------->
+        <!------------------------------------------------------------------------------------------>
 
-        <!---------------------------------INGLÊS BÁSICO-->
         <div class='curso_content curso_ingles_basico'>
             <h2>Inglês Básico</h2>
             <div class='categoria'>
@@ -148,14 +159,17 @@
                 </ul>
             </div>
             <div class='div_valor'>
-                <p class='valor'>Investimento: R$120,00</p>
+                <p class='valor'>Investimento: R$140,00</p>
             </div>
             <div class='div_duracao'>
                 <p class='duracao'>Duração: 12 meses</p>
             </div>
         </div>
 
-        <!---------------------------------INGLÊS Intermediário-->
+        <!------------------------------------------------------------------------------------------>
+        <!---------------------------------INGLÊS Intermediário------------------------------------->
+        <!------------------------------------------------------------------------------------------>
+
         <div class='curso_content curso_ingles_intermediario'>
             <h2>Inglês Intermediário</h2>
             <div class='categoria'>
@@ -173,13 +187,17 @@
                 </ul>
             </div>
             <div class='div_valor'>
-                <p class='valor'>Investimento: R$120,00</p>
+                <p class='valor'>Investimento: R$140,00</p>
             </div>
             <div class='div_duracao'>
                 <p class='duracao'>Duração: 12 meses</p>
             </div>
         </div>
-        <!---------------------------------INGLÊS Avançado-->
+
+        <!------------------------------------------------------------------------------------------>
+        <!---------------------------------INGLÊS AVANÇADO------------------------------------------>
+        <!------------------------------------------------------------------------------------------>
+
         <div class='curso_content curso_ingles_avancado'>
             <h2>Inglês Avançado</h2>
             <div class='categoria'>
@@ -197,14 +215,17 @@
                 </ul>
             </div>
             <div class='div_valor'>
-                <p class='valor'>Investimento: R$120,00</p>
+                <p class='valor'>Investimento: R$140,00</p>
             </div>
             <div class='div_duracao'>
                 <p class='duracao'>Duração: 12 meses</p>
             </div>
         </div>
 
-        <!---------------------------------INGLÊS KIDS-->
+        <!------------------------------------------------------------------------------------------>
+        <!---------------------------------INGLÊS KIDS---------------------------------------------->
+        <!------------------------------------------------------------------------------------------>
+        
         <div class='curso_content curso_ingles_avancado'>
             <h2>Inglês KIDS</h2>
             <div class='categoria'>
@@ -222,14 +243,72 @@
                 </ul>
             </div>
             <div class='div_valor'>
-                <p class='valor'>Investimento: R$120,00</p>
+                <p class='valor'>Investimento: R$140,00</p>
+            </div>
+            <div class='div_duracao'>
+                <p class='duracao'>Duração: 12 meses</p>
+            </div>
+        </div>
+          <!------------------------------------------------------------------------------------------>
+        <!-------------------------------------ADMINISTRAÇÃO---------------------------------------------->
+        <!------------------------------------------------------------------------------------------>
+        
+        <div class='curso_content curso_adm'>
+            <h2>Administração</h2>
+            <div class='categoria'>
+                <p>Categoria: Administração</p>
+            </div>
+            <div class='modulos'>
+                <h3>Módulos</h3>
+                <ul>
+                    <li>
+                        KIDS (a criança aprenderá de forma divertida, espontânea e prática, tendo o contato com a língua inglesa através de atividades, jogos, quadrinhos e dinâmicas onde ela começará a formar seu vocabulário, tendo como base o alfabeto, cores, numerais, itens do dia-a-dia além das expressões bases do idioma).
+                    </li>
+                    <li>
+                        Pre-teen (o aluno será preparado para as próximas etapas do Espanhol, onde terá seu vocabulário expandido, trabalhando as bases do idioma de forma dinâmica e interativa).
+                    </li>
+                </ul>
+            </div>
+            <div class='div_valor'>
+                <p class='valor'>Investimento: R$140,00</p>
             </div>
             <div class='div_duracao'>
                 <p class='duracao'>Duração: 12 meses</p>
             </div>
         </div>
 
-        <!---------------------------------EXCEL AVANÇADO-->
+        <!------------------------------------------------------------------------------------------>
+        <!---------------------------------ESPANHOL---------------------------------------------->
+        <!------------------------------------------------------------------------------------------>
+        
+        <div class='curso_content curso_espanhol_basico'>
+            <h2>Espanhol Básico / Intermediário</h2>
+            <div class='categoria'>
+                <p>Categoria: Espanhol</p>
+            </div>
+            <div class='modulos'>
+                <h3>Módulos</h3>
+                <ul>
+                    <li>
+                        KIDS (a criança aprenderá de forma divertida, espontânea e prática, tendo o contato com a língua inglesa através de atividades, jogos, quadrinhos e dinâmicas onde ela começará a formar seu vocabulário, tendo como base o alfabeto, cores, numerais, itens do dia-a-dia além das expressões bases do idioma).
+                    </li>
+                    <li>
+                        Pre-teen (o aluno será preparado para as próximas etapas do Espanhol, onde terá seu vocabulário expandido, trabalhando as bases do idioma de forma dinâmica e interativa).
+                    </li>
+                </ul>
+            </div>
+            <div class='div_valor'>
+                <p class='valor'>Investimento: R$140,00</p>
+            </div>
+            <div class='div_duracao'>
+                <p class='duracao'>Duração: 12 meses</p>
+            </div>
+        </div>
+      
+        <!------------------------------------------------------------------------------------------>
+        <!---------------------------------EXCEL AVANÇADO------------------------------------------->
+        <!------------------------------------------------------------------------------------------>
+
         <div class='curso_content curso_excel_avancado'>
             <h2>Excel Avançado</h2>
             <div class='categoria'>
@@ -273,14 +352,18 @@
                 </ul>
             </div>
             <div class='div_valor'>
-                <p class='valor'>Investimento: R$140,00</p>
+                <p class='valor'>Investimento: R$160,00</p>
             </div>
             <div class='div_duracao'>
                 <p class='duracao'>Duração: 6 meses</p>
             </div>
         </div>
 
-        <!---------------------------------DESENVOLVIMENTO WEB-->
+
+        <!------------------------------------------------------------------------------------------>
+        <!---------------------------------DESENVOLVIMENTO WEB-------------------------------------->
+        <!------------------------------------------------------------------------------------------>
+
         <div class='curso_content curso_web'>
             <h2>Desenvolvimento WEB</h2>
             <div class='categoria'>
@@ -299,7 +382,7 @@
                 </ul>
             </div>
             <div class='div_valor'>
-                <p class='valor'>Investimento: R$120,00</p>
+                <p class='valor'>Investimento: R$140,00</p>
             </div>
             <div class='div_duracao'>
                 <p class='duracao'>Duração: 12 meses</p>
@@ -329,7 +412,7 @@
                 </ul>
                 </div>
                 <div class='div_valor'>
-                    <p class='valor'>Investimento: R$120,00</p>
+                    <p class='valor'>Investimento: R$160,00</p>
                 </div>
                 <div class='div_duracao'>
                     <p class='duracao'>Duração: 12 meses</p>
