Curso Info adicionado

--- a/src/assets/css/sass/alunos/_view_table_alunos.scss
+++ b/src/assets/css/sass/alunos/_view_table_alunos.scss
@@ -5,6 +5,10 @@
 }
 #view_table_alunos
 {
+    th{
+        background:rgb(196, 102, 65);
+    }
+    
     .td_ra{
         text-align: center;
     }
