--- a/src/components/cursosInfo/formAddCursoInfo.html
+++ b/src/components/cursosInfo/formAddCursoInfo.html
@@ -25,7 +25,6 @@
         <option value='reforço'>Reforço</option>
         <option value='recreativo'>Recreativo</option>
     </select>
-      
     </div>
     <div id='div_modulos'>
         <label>Módulos: </label>
@@ -43,6 +42,10 @@
     <div id='div_parcelas'>
         <label>Parcelas: </label>
         <input  required='true' type='number' id='parcelas' />
+    </div>
+    <div id='div_carga_horaria'>
+        <label>Carga Horária: </label>
+        <input  required='true' type='number' id='carga_horaria' />
     </div>
 
     <div class='div_submit'><input type='submit' value="Salvar"/></div>
