--- a/src/components/cursosInfo/resumoCursosInfo.html
+++ b/src/components/cursosInfo/resumoCursosInfo.html
@@ -83,21 +83,21 @@
             <div class='modulos'>
                 <h3>Módulos</h3>
                 <ul>
-                    <li>Introdução a Informática</li>
-                    <li>Dispositivos</li>
-                    <li>Pacote Office</li>
-                    <li>Instalação de Programas</li>
-                    <li>Atualização e Formatação</li>
-                    <li>Windows</li>
-                    <li>Digitação</li>
-                    <li>Hardware,</li>
-                    <li>Redes</li>
-                    <li>Internet,</li>
-                    <li>Backup e Segurança</li>
-                    <li>Gerenciamento de Dados</li>
-                    <li>Inglês Instrumental</li>
-                    <li>Lógica de Programação</li>
-                    <li>
+                   Introdução a Informática,
+                   Dispositivos,
+                   Pacote Office,
+                   Instalação de Programas,
+                   Atualização e Formatação,
+                   Windows,
+                   Digitação,
+                   Hardware,,
+                   Redes,
+                   Internet,,
+                   Backup e Segurança,
+                   Gerenciamento de Dados,
+                   Inglês Instrumental,
+                   Lógica de Programação,
+                   
                         Introdução a: HTML, CSS, JS, Photoshop</li>
                 </ul>
             </div>
