--- a/src/components/cursosInfo/viewTableCursosInfo.html
+++ b/src/components/cursosInfo/viewTableCursosInfo.html
@@ -4,11 +4,18 @@
             <th>Categoria</th>
             <th>Curso</th>
             <th>Módulos</th>
-            <th>Valor</th>
-            <th>Parcelas</th>
-            <th>Duração</th>
+            <th>Parc.</th>
+            <th>Durac.</th>
+            <th>C. H.</th>
+            <th>Valor R$</th>
+
+            <th></th>
+            <th></th>
         </thead>
         <tbody id='tbody'>
+            <td>...</td>
+            <td>...</td>
+            <td>...</td>
             <td>...</td>
             <td>...</td>
             <td>...</td>
