--- a/src/assets/css/sass/cursos_info/_form_add_curso_info.scss
+++ b/src/assets/css/sass/cursos_info/_form_add_curso_info.scss
@@ -7,6 +7,7 @@
         width:100%;
     }
 
+
     #div_valor_mes, #div_duracao, #div_parcelas{
         padding:3px;
         max-width: 33.3333%;
@@ -14,6 +15,11 @@
             max-width: 100%;
             min-width: 50px !important;
         }
+    }
+
+    #modulos{ min-height: 150px;}
+    input[ readonly='true']{
+        background: #ddd;
     }
 
 }
