--- a/src/components/cursosInfo/viewTableCursosInfo.html
+++ b/src/components/cursosInfo/viewTableCursosInfo.html
@@ -1,6 +1,7 @@
 <div  class='bg_tables bg_view_tables' id='bg_view_table_cursos_info'>
     <table class='view_table' border='1'  id='view_table_cursos_info'>
         <thead> 
+            <th>Cod.</th>
             <th>Categoria</th>
             <th>Curso</th>
             <th>Módulos</th>
@@ -13,6 +14,7 @@
             <th></th>
         </thead>
         <tbody id='tbody'>
+            <td>...</td>
             <td>...</td>
             <td>...</td>
             <td>...</td>
