--- a/src/assets/css/sass/cursos_info/_form_add_curso_info.scss
+++ b/src/assets/css/sass/cursos_info/_form_add_curso_info.scss
@@ -6,9 +6,11 @@
     #div_modulos{
         width:100%;
     }
+#id_curso{
+    text-transform: uppercase;
+}
 
-
-    #div_valor_mes, #div_duracao, #div_parcelas{
+    #div_valor_mes, #div_duracao, #div_parcelas, #div_carga_horaria, #div_id_curso{
         padding:3px;
         max-width: 33.3333%;
         input{
