--- a/src/assets/css/sass/style.scss
+++ b/src/assets/css/sass/style.scss
@@ -106,6 +106,12 @@ body {
 
 h1{text-align: center;}
 
+
+.input_invalido {
+  background: #f1c0c0 !important;
+}
+
+
 #adminContent{
   background: #ddd url("https://img.rawpixel.com/s3fs-private/rawpixel_images/website_content/rm380-16-x_1.jpg?w=800&dpr=1&fit=default&crop=default&q=65&vib=3&con=3&usm=15&bg=F4F4F3&ixlib=js-2.2.1&s=d0c544f028f2405b219eb997cb580e21") ; 
  background-size: 100% auto ;
@@ -149,9 +155,6 @@ grid-template-columns: 250px 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
   background:#22222270;
   z-index: 5;
 
-  div{
- 
-  }
 }
 
 .btn_close{
