--- a/src/components/cursosInfo/formAddCursoInfo.html
+++ b/src/components/cursosInfo/formAddCursoInfo.html
@@ -7,7 +7,16 @@
         </svg>
         Adicionar Curso</h3>
     <span class="btn_close_form">X</span>
+<div  id='div_id_curso'>
+    <label>Cod.: </label>
+    <input  required='true' list='list_id_cursos_info' id='id_curso' placeholder="ex.: IFC"/>
+    <datalist id='list_id_cursos_info'>
+        <option></option>
+
+    </datalist>
+</div>
     <div>
+      
         <label>Nome: </label>
         <input required='true' type='text' id='nome' value=''/>
     </div>
@@ -26,27 +35,32 @@
         <option value='recreativo'>Recreativo</option>
     </select>
     </div>
+    <div  id='div_duracao'>
+        <label>Duração: </label>
+        <input  required='true' type='number' id='duracao' />
+    </div>
+
     <div id='div_modulos'>
         <label>Módulos: </label>
         <textarea  required='true' id='modulos'></textarea>
     </div>
 
-    <div id='div_valor_mes'>
-        <label>Valor: </label>
-        <input  required='true' type='text' id='valor_mes' value='0,00'/>
+    <div id='div_carga_horaria'>
+        <label>C. Hr.: </label>
+        <input  required='true' type='number' id='carga_horaria' />
+        
     </div>
-    <div  id='div_duracao'>
-        <label>Duração: </label>
-        <input  required='true' type='number' id='duracao' />
-    </div>
+
     <div id='div_parcelas'>
         <label>Parcelas: </label>
         <input  required='true' type='number' id='parcelas' />
     </div>
-    <div id='div_carga_horaria'>
-        <label>Carga Horária: </label>
-        <input  required='true' type='number' id='carga_horaria' />
+    <div id='div_valor_mes'>
+        <label>Valor: </label>
+        <input  required='true' type='text' id='valor_mes' value='0,00'/>
     </div>
+
+ 
 
     <div class='div_submit'><input type='submit' value="Salvar"/></div>
 
