--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -913,53 +913,53 @@ menu.submenu_page ul li a {
 #cursos_info .page_content .curso_content .modulos ul li {
   margin-left: 20px;
 }
-#cursos_info .page_content .curso_content .div_valor, #cursos_info .page_content .curso_content .div_duracao {
+#cursos_info .page_content .curso_content .div_valor, #cursos_info .page_content .curso_content .div_duracao, #cursos_info .page_content .curso_content .div_carga_horaria {
   margin-top: 10px;
   font-size: 20px !important;
 }
-#cursos_info .page_content .curso_content .div_valor p, #cursos_info .page_content .curso_content .div_duracao p {
+#cursos_info .page_content .curso_content .div_valor p, #cursos_info .page_content .curso_content .div_duracao p, #cursos_info .page_content .curso_content .div_carga_horaria p {
   font-weight: bold;
 }
-#cursos_info .page_content div[class*=curso_informatica] {
+#cursos_info .page_content div[class*=color_Informática] {
   border-color: #1f3c7a;
 }
-#cursos_info .page_content div[class*=curso_informatica] h2 {
+#cursos_info .page_content div[class*=color_Informática] h2 {
   color: #1f3c7a;
 }
-#cursos_info .page_content div[class*=curso_excel] {
+#cursos_info .page_content div[class*=color_Excel] {
   border-color: #097a4a;
 }
-#cursos_info .page_content div[class*=curso_excel] h2 {
+#cursos_info .page_content div[class*=color_Excel] h2 {
   color: #097a4a;
 }
-#cursos_info .page_content div[class*=curso_ingles] {
+#cursos_info .page_content div[class*=color_Inglês] {
   border-color: #ad054b;
 }
-#cursos_info .page_content div[class*=curso_ingles] h2 {
+#cursos_info .page_content div[class*=color_Inglês] h2 {
   color: #ad054b;
 }
-#cursos_info .page_content div[class*=curso_web] {
+#cursos_info .page_content div[class*="color_Desenvolvimento Web"] {
   border-color: #1f3c7a;
 }
-#cursos_info .page_content div[class*=curso_web] h2 {
+#cursos_info .page_content div[class*="color_Desenvolvimento Web"] h2 {
   color: #1f3c7a;
 }
-#cursos_info .page_content div[class*=curso_espanhol] {
+#cursos_info .page_content div[class*=color_Espanhol] {
   border-color: #f0a029;
 }
-#cursos_info .page_content div[class*=curso_espanhol] h2 {
+#cursos_info .page_content div[class*=color_Espanhol] h2 {
   color: #7a082e;
 }
-#cursos_info .page_content div[class*=curso_adm] {
+#cursos_info .page_content div[class*=color_Adm] {
   border-color: #0d705c;
 }
-#cursos_info .page_content div[class*=curso_adm] h2 {
+#cursos_info .page_content div[class*=color_Adm] h2 {
   color: #0d705c;
 }
-#cursos_info .page_content div[class*=curso_banco] {
+#cursos_info .page_content div[class*=color_Banco] {
   border-color: #ca881d;
 }
-#cursos_info .page_content div[class*=curso_banco] h2 {
+#cursos_info .page_content div[class*=color_Banco] h2 {
   color: #ca881d;
 }
 
