W.I.P - Btns delete em fluxo de caixa

--- a/src/assets/css/sass/abstracts/_variables.scss
+++ b/src/assets/css/sass/abstracts/_variables.scss
@@ -54,8 +54,8 @@ $padding-large : 40px;
 $background-informatica : #2282be;
 $color-informatica : rgb(31, 60, 122);
 
-$background-web : #174a83;
-$color-web : rgb(31, 60, 122);
+$background-web : #015dc5;
+$color-web : #015dc5;
 
 $background-ingles : #ed1860;
 $color-ingles : #ad054b;
