--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -939,10 +939,10 @@ menu.submenu_page ul li a {
   color: #ad054b;
 }
 #cursos_info .page_content div[class*="color_Desenvolvimento Web"] {
-  border-color: #1f3c7a;
+  border-color: #015dc5;
 }
 #cursos_info .page_content div[class*="color_Desenvolvimento Web"] h2 {
-  color: #1f3c7a;
+  color: #015dc5;
 }
 #cursos_info .page_content div[class*=color_Espanhol] {
   border-color: #f0a029;
