--- a/src/components/fluxoCaixa/formAddPagMensalidade.html
+++ b/src/components/fluxoCaixa/formAddPagMensalidade.html
@@ -59,7 +59,7 @@
     </div>
     <div  class='div_inputs div_forma_pag'>
         <label>Forma de Pag.</label>
-        <select id='forma_pag'>
+        <select required='true' id='forma_pag'>
             <option disabled selected></option>
             <option value='dinheiro'>Dinheiro</option>
             <option value='débito'>Débito</option>
