--- a/src/assets/css/sass/elements/_main_menu_lateral_admin.scss
+++ b/src/assets/css/sass/elements/_main_menu_lateral_admin.scss
@@ -23,6 +23,7 @@
     ul li {
       clear:both;
       a {
+        user-select: none;
         padding: 13px 15px;
         color: #fafafa;
         height: auto;
@@ -31,10 +32,21 @@
         display: block;
 
         &:hover {
-          color: lighten($primary-color, 30%);
-          background:#333;
+          //color: lighten($primary-color, 30%);
+          background:#2a2a2a;
+        }
+        &:active{
+          background:#2c2c2c;
+         
+
         }
       }
+    }
+    .active{
+      //color:#ff9;
+      color: rgb(109, 172, 253);
+      background:#1f1f1f;
+
     }
   }
 }
